--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00695c</color>
-    <color name="colorAccent">#b2dfdb</color>
+    <color name="colorAccent">#00695c</color>
 </resources>
