--- a/app/src/main/res/layout/rowitem.xml
+++ b/app/src/main/res/layout/rowitem.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/iv"
+            android:id="@+id/ivItem"
             android:layout_width="62dp"
             android:layout_height="62dp"
             app:srcCompat="@mipmap/ic_launcher_round" />
 
         <TextView
-            android:id="@+id/tvAttraction"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvItem"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:padding="18dp"
-            android:text="TextView"
-            android:textSize="18sp" />
+            android:text="TextView" />
     </LinearLayout>
+
 </LinearLayout>
